Fix stylesheet - turn off fixed-position top bar to deal with wrapping long names

--- a/app/assets/stylesheets/style.css.sass
+++ b/app/assets/stylesheets/style.css.sass
@@ -3,9 +3,12 @@ $lightBackground: #eee
 
 body
   font-family: Calibri, sans-serif
-  padding-top: 50px
+  padding-top: 0
 a
   text-decoration: none
+.topbar
+  position: relative
+  height: auto
 .topbar h1
   font-weight: bold
   font-size: x-large
